# foa-example-project

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
