[package]
edition      = "2024"
name         = "foa-example-project"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "foa-example-project"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32", "log-04", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp32",
  "log-04",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32", "log-04"] }
log                    = "0.4.27"

embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log"] }
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = [
  "esp32",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.1", features = ["esp32", "log-04"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"
foa = { version = "0.1.1", features = ["esp32", "log"] }
foa_sta = { version = "0.1.1", features = ["esp32", "log"] }
embassy-net = { version = "0.7.1", features = ["proto-ipv6", "tcp", "dns", "medium-ethernet", "proto-ipv4", "udp", "icmp", "log", "dhcpv4"] }
embedded-io-async = "0.6.1"
reqwless = "0.13.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
